--- a/Public/style.css
+++ b/Public/style.css
@@ -1,8 +1,53 @@
 .nav-links{
-    text-align:center
-    
-    
+    display: flex;
+    padding-left: 10px; 
+    padding-bottom: 10px;
+    padding-top: 20px;
+    padding-right: 10px;
+    list-style-type: none; 
+    /* background-image: url("TitleBack.png");  */
+    /* background-size: cover; 
+    background-position: center;  */
+    background-attachment: fixed; gap: 40px;
+    gap: 40px;
 }
 html{
     font-family:Verdana, Geneva, Tahoma, sans-serif
+}
+html, body {
+  height: 100%;
+}
+body {
+  background-image: url("background.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+}
+.title {
+  font-family: "Playfair", serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: italic;
+  font-variation-settings:"wdth" 100;
+  color:rgb(255, 255, 255);
+  font-size: 50px;
+}
+.nav-links a {
+  line-height: 1;      
+  padding: 6px 0;
+  font-family: "Garamond", serif;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  font-size: 18px;
+  margin-left: auto;
+}
+.nav-links h1{
+  margin: 0;            
+  line-height: 1;       
+}
+.line {
+  width: 100%;
+  height: 3px;
+  background-color: rgb(255, 255, 255);
 }
